FILES = \
		about \
		adjusttime \
		applytranslation \
		bestfit \
		changeframerate \
		clipboard \
		combinesubtitles \
		command \
		configurekeyboardshortcuts \
		dialoguize \
		documentmanagement \
		documentsnavigation \
		duplicatesubtitle \
		editcell \
		errorchecking \
		extendlength \
		externalvideoplayer \
		findandreplace \
		findbytime \
		insertsubtitle \
		insertsubtitlefromkeyframe \
		italicize \
		joindocument \
		keyframesmanagement \
		minimizeduration \
		moveafterprecedingsubtitle \
		movesubtitles \
		plaintext \
		preferences \
		removesubtitle \
		reversetextandtranslation \
		scalesubtitles \
		selection \
		slidetimings \
		slidewords \
		sortsubtitles \
		spellchecking \
		splitdocument \
		splitsubtitle \
		styleeditor \
		stylize \
		stacksubtitles \
		template \
		textcorrection \
		timemodemanagement \
		timingfromplayer \
		typewriter \
		videoplayermanagement \
		viewmanager \
		waveformmanagement

DIST_SUBDIRS = $(FILES)

SUBDIRS = $(FILES)
