gladedir = $(PACKAGE_SHARE_DIR)/glade/

glade_DATA = \
					dialog-change-framerate.glade \
					dialog-check-errors.glade \
					dialog-check-errors-preferences.glade \
					dialog-encodings-chooser.glade \
					dialog-find-and-replace.glade \
					dialog-move-subtitles.glade \
					dialog-preferences.glade \
					dialog-scale-subtitles.glade \
					dialog-script-properties.glade \
					dialog-spell-checking.glade \
					dialog-split-document.glade \
					dialog-style-editor.glade \
					dialog-configure-keyboard-shortcuts.glade \
					dialog-view-manager.glade \
					dialog-open-document.glade \
					dialog-save-document.glade \
					dialog-import-text.glade \
					dialog-export-text.glade \
					dialog-character-codings.glade \
					subtitleeditor.glade 

EXTRA_DIST = $(glade_DATA)

CLEANFILES = Makefile.am~ *.glade~ *.gladep *.gladep.bak

