uidir = $(PACKAGE_SHARE_DIR)/ui/

ui_DATA = \
					dialog-script-properties.ui \
					dialog-open-document.ui \
					dialog-save-document.ui \
					dialog-import-text.ui \
					dialog-export-text.ui \
					dialog-character-codings.ui \
					subtitleeditor.ui 

EXTRA_DIST = $(ui_DATA)

CLEANFILES = Makefile.am~ *.ui~ *.uip *.uip.bak

